--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,10 @@ dependencies:
   flutter:
     sdk: flutter
   sqflite: ^2.0.0+3
-
+  intl: ^0.17.0
+  conditional_builder: ^1.0.2
+  bloc: ^7.0.0
+  flutter_bloc: ^7.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
